--- a/style.css
+++ b/style.css
@@ -1,35 +1,75 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.container {
-    background: rgb(68, 68, 244);
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
+body {
+  background: rgb(68, 68, 244);
+  display: flex;
+  justify-content: center;
 }
 
-.stop-watch{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: white;
-    margin: 200px 200px;
-    padding: 100px 100px;
+.stop-watch-container {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+  padding: 50px;
+  position: absolute;
+  top: 25%;
+  border-radius: 5px;
 }
 
-.timer-digit{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.stop-watch-screen {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 1px 5px 5px lightblue;
 }
 
-.display{
-    width: 35px;
-    /* border: none; */
-    padding: 20px 20px;
-    font-size: 30px;
+.colon {
+  font-size: 50px;
+  padding-bottom: 8px;
+  color: rgb(5, 75, 101);
+}
+
+.stop-watch-display {
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  color: rgb(5, 75, 101);
+  padding: 40px;
+  font-size: 50px;
+}
+
+.stop-watch-controls {
+  display: flex;
+  gap: 40px;
+}
+
+.stop-watch-button {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+#pause {
+  background: blue;
+}
+
+#start {
+  background: red;
+}
+
+#reset {
+  background: green;
 }
