--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 60px;
-  padding: 50px;
-  border-radius: 5px;
+  padding: 30px 30px 55px;
+  border-radius: 7px;
 }
 
 .stop-watch-screen {
@@ -28,18 +28,19 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 1px 1px 5px 5px lightblue;
+  border-radius: 6px;
 }
 
 .colon {
   font-size: 50px;
   padding-bottom: 8px;
-  color: rgb(5, 75, 101);
+  color: rgb(0, 115, 154);
 }
 
 .stop-watch-display {
   display: flex;
   justify-content: center;
-  color: rgb(5, 75, 101);
+  color: rgb(0, 115, 154);
   padding: 40px;
   font-size: 50px;
   font-family: "Fragment Mono";
